tests/ui/parser/shebang/issue-71471-ignore-tidy.stderr
error: expected `[`, found `B`
  --> $DIR/issue-71471-ignore-tidy.rs:2:3
   |
LL | #!B
   |   ^ expected `[`

error: aborting due to previous error

